--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+}
+.dir-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+  margin-left: 1rem;
+}
+.dir-section {
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+  gap: 0.4rem;
+}
+.file-section {
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+  margin-top: 0.2rem;
+  margin-bottom: 0.2rem;
+  margin-left: 1rem;
+  gap: 0.4rem;
+}
+.dir {
+  color: #FFC107;
+  display: flex;
+  align-items: center;
+}
+.file{
+  color: #232323;
+  display: flex;
+  align-items: center;
+}
+.name{
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+.file-name{
+  font-size: 1.3rem;
+  font-weight: 500;
 }
